# deduba_cs

./: .clang-format  .csharpierrc  .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  DeDuBa.sln  Directory.Build.props  Directory.Build.targets  README.md  deduba.pl  deduba_cs.code-workspace  demo-xattr.sh  dummy.json  generate-docs.sh  ignored_files_list.txt  logfilter.pl  package-lock.json  package.json  test-acl.sh  test-old.pl  test-show.sh  test-xattr.sh  test.sh  test_xattr_manual.cs  tester.sh
.githooks/: commit-msg
.github/: RELEASE.md  copilot-instructions.md  copilot-languageModelTools.csv  copilot-languageModelTools.json  copilot-languageModelTools.md
.github/instructions/: commit-this.instructions.md  commit_all.instructions.md
.github/workflows/: ci.yml  csharpier.yml
.trunk/: trunk.yaml
ARCHIVE4/: log_2025-11-23-12-34-35  log_2025-11-23-12-37-39
DeDuBa/: ArchiveStore.cs  BackupConfig.cs  DeDuBa.csproj  Deduba.cs  IArchiveStore.cs  LibCalls.cs  Program.cs  StringExtensions.cs  StructuredData.cs  aaaa.cs-  deduba.cs  xxx.sh
DeDuBa.Test/: AclTests.cs  ArchiveStoreTests.cs  BackupConfigTests.cs  DeDuBa.Test.csproj  DedubaIntegrationTests.cs  OsCallsLinuxTests.cs  OsCallsWindowsTests.cs  ResetUtilitiesLogAttribute.cs  TestEnvironment.cs  UnitTest1.cs  XattrTests.cs
OsCalls/: Acl.cs  FileSystem.cs  OsCalls.csproj  UserGroupDB.cs  UserGroupDatabase.cs  ValXfer.cs  Xattr.cs
OsCallsCommon/: IArchiveStore.cs  IHighLevelOsApi.cs  InodeData.cs  OsException.cs  ValXfer.cs
OsCallsCommonShim/: CMakeLists.txt  Makefile  OsCallsCommonShim.csproj
OsCallsCommonShim/include/: OcExport.h  Platform.h  ValXfer.h
OsCallsCommonShim/src/: ValXfer.cpp  exports.def
OsCallsLinux/: Acl.cs  FileSystem.cs  LinuxHighLevelOsApi.cs  ModuleInitializer.cs  OsCallsLinux.csproj  UserGroupDatabase.cs  Xattr.cs
OsCallsLinuxShim/: CMakeLists.txt  Makefile  OsCallsLinuxShim.csproj
OsCallsLinuxShim/include/: FileSystem.h  UserGroupDatabase.h  Xattr.h
OsCallsLinuxShim/src/: Acl.cpp  FileSystem.cpp  LibraryLifecycle.cpp  UserGroupDatabase.cpp  Xattr.cpp
OsCallsShim/: Makefile  OsCallsShim.csproj
OsCallsShim/include/: Acl.h  FileSystem.h  UserGroupDB.h  UserGroupDatabase.h  ValXfer.h  Xattr.h
OsCallsShim/src/: Acl.cpp  FileSystem.cpp  UserGroupDatabase.cpp  ValXfer.cpp  Xattr.cpp
OsCallsWindows/: FileSystem.cs  Security.cs  Streams.cs  WindowsHighLevelOsApi.cs
OsCallsWindowsShim/: CMakeLists.txt  OsCallsWindowsShim.csproj  README.md
OsCallsWindowsShim/include/: FileSystem.h  Security.h  Streams.h
OsCallsWindowsShim/src/: FileSystem.cpp  LibraryLifecycle.cpp  Security.cpp  Streams.cpp
UtilitiesLibrary/: Utilities.cs  UtilitiesLibrary.csproj
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/OsCallsCommonShim/: Makefile  cmake_install.cmake
_codeql_build_dir/OsCallsCommonShim/include/: OsCallsCommonShim_export.h
_codeql_build_dir/OsCallsLinuxShim/: Makefile  cmake_install.cmake
docs/: ARCHIVE_REFACTOR.md  ARTIFACT_CLEANUP_RUNBOOK.md  CHANGELOG.md  Doxyfile  FUTURE_PLANS.md  IHighLevelOsApi-Plan.md  More_Plans.md  OsCallsWindowsShim.md  README.md  docfx.json  index.md  plan-highLevelOsApi.prompt.md  toc.yml  xattr.md
docs/api/: index.md
docs/articles/: intro.md
doxygen/html/: graph_legend.html  index.html
scripts/: check_doxygen_and_platform_header.py  check_doxygen_and_platform_header.sh  cleanup-artifacts-gh.sh  convert-csv-to-md.sh  demo-xattr.sh  extract_copilot_tools.py  format-all.sh  generate-docs.sh  generate_copilot_tools_csv.py  generate_copilot_tools_md.sh  install-git-hooks.sh  open-served-docs.sh  package.sh  purge-actions-storage-gh.sh  serve-docs.sh  test-show.sh  test.sh  verify-release-checksums.py
src/ArchiveDataHandler/: ArchiveDataHandler.csproj  ArchiveStore.cs  IArchiveStore.cs
src/ArchiveStore/: ArchiveStore.cs  ArchiveStore.csproj  IArchiveStore.cs
src/DeDuBa/: BackupConfig.cs  DeDuBa.csproj  Deduba.cs  HighLevelOsApiFactory.cs  IArchiveStore.cs  Program.cs  StringExtensions.cs
src/DeDuBa.Test/: AclTests.cs  ArchiveStoreTests.cs  BackupConfigTests.cs  DeDuBa.Test.csproj  DedubaIntegrationTests.cs  HighLevelOsApiTests.cs  OsCallsLinuxTests.cs  OsCallsWindowsTests.cs  ResetUtilitiesLogAttribute.cs  TestEnvironment.cs  UnitTest1.cs  XattrTests.cs
src/DeDuBa/ArchiveDataHandler/: ArchiveStore.cs
src/DeDuBa/UtilitiesLibrary/: BackupConfig.cs  Utilities.cs  UtilitiesLogger.cs
src/Interfaces/: IArchiveStore.cs  IBackupConfig.cs  IHighLevelOsApi.cs  ILogging.cs  InodeData.cs
src/OsCallsCommon/: AssemblyInfo.cs  IHighLevelOsApi.cs  InodeData.cs  OsCallsCommon.csproj  OsException.cs  ValXfer.cs
src/OsCallsCommonShim/: CMakeLists.txt  OsCallsCommonShim.csproj
src/OsCallsCommonShim/include/: Platform.h  ValXfer.h
src/OsCallsCommonShim/src/: ValXfer.cpp
src/OsCallsLinux/: Acl.cs  FileSystem.cs  LinuxHighLevelOsApi.cs  LinuxHighLevelOsApiAdapter.cs  OsCallsLinux.csproj  UserGroupDatabase.cs  Xattr.cs
src/OsCallsLinuxShim/: OsCallsLinuxShim.csproj
src/OsCallsLinuxShim/include/: Acl.h  FileSystem.h  UserGroupDatabase.h  Xattr.h
src/OsCallsLinuxShim/src/: Acl.cpp  FileSystem.cpp  LibraryLifecycle.cpp  UserGroupDatabase.cpp  Xattr.cpp
src/OsCallsWindows/: FileSystem.cs  OsCallsWindows.csproj  Security.cs  Streams.cs  WindowsHighLevelOsApi.cs  WindowsHighLevelOsApiAdapter.cs
src/OsCallsWindowsShim/: OsCallsWindowsShim.csproj
src/OsCallsWindowsShim/cmake/toolchains/: mingw-w64-x86_64.cmake
src/OsCallsWindowsShim/include/: FileSystem.h  Security.h  Streams.h
src/OsCallsWindowsShim/src/: FileSystem.cpp  LibraryLifecycle.cpp  Security.cpp  Streams.cpp
src/UtilitiesLibrary/: BackupConfig.cs  IBackupConfig.cs  ILogging.cs  UtilitiesLibrary.csproj  UtilitiesLogger.cs
